[package]
name = "mocha-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
as-any = "0.3.1"
env_logger = "0.11.6"
lazy_static = "1.5.0"
log = "0.4.25"
once_cell = "1.20.2"
phf = { version = "0.11", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
chrono = "0.4.39"
reqwest = {  version = "0.12.12", features = ["blocking"] }
regex = "1.11.1"
