[package]
name = "mocha-rs"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
debug = false
panic = "abort"
codegen-units = 1


[dependencies]
env_logger = "0.11.6"
lazy_static = "1.5.0"
log = "0.4.25"
phf = { version = "0.11", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
chrono = "0.4.39"
reqwest = {  version = "0.12.12", features = ["blocking"] }
